c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/extra_credit/scalar_required/union_as_controlling_expression.c
// Can't use union as controlling expression

union u {int x;};

int main(void) {
    union u my_union = {10};
    if (my_union) {
        return 1;
    }
    return 0;
}